--- a/project/finalCodingTest/movieStar/package.json
+++ b/project/finalCodingTest/movieStar/package.json
@@ -1,6 +1,7 @@
 {
     "name": "moviestar",
     "version": "1.0.0",
+    "type": "module",
     "description": "",
     "main": "index.js",
     "scripts": {
